- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    None
- 
    5.3.0
- 
    None
- 
    Linux, KDE
- 
        5738bb533b97a9e19c18373286b157ee4d443532
Steps to reproduce:
- Launch qtquickcontrols/examples/quick/controls/texteditor
- Choose Help/About
- Note warning"
QObject::connect: No such signal QMessageBoxHelper::clicked(QMessageDialogOptions::StandardButton,QMessageDialogOptions::ButtonRole) in qquickqmessagebox.cpp:137 
- Try again - it seems to work only once
- is required for
- 
                    QTBUG-36712 Issues to be fixed before 5.3.0 Beta 1 release -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-36988 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 79313,3 | changes to MessageDialog click(StandardButton, ButtonRole) signal/slot | stable | qt/qtquickcontrols | Status: MERGED | +2 | 0 |