changes to MessageDialog click(StandardButton, ButtonRole) signal/slot

After f212322a6ecb237d5fb53e56c6dafffb87e45f09 there was a warning
about failing to connect QMessageBoxHelper::clicked to this slot.
Also accept() and reject() are not signals so they should not be
called with emit.

Task-number: QTBUG-36988
Change-Id: I1752ec08cbe82cc2bd9ffc9d920c1487bc17fa76
Reviewed-by: Berthold Krevert <berthold.krevert@basyskom.com>
Reviewed-by: Liang Qi <liang.qi@digia.com>