src/dialogs/qquickabstractmessagedialog_p.h
@@ -124,7 +124,7 @@ Q_SIGNALS:
     void apply();
     void reset();
 
-protected:
+protected Q_SLOTS:
     void click(QPlatformDialogHelper::StandardButton button, QPlatformDialogHelper::ButtonRole);
 
 protected:
